# proto_gazebo

./: CMakeLists.txt  package.xml  setup.cfg  setup.py
launch/: gazebo.launch.py
models/karting_club_model/: LICENSE.txt  model.config  model.sdf
models/karting_club_model/meshes/lane/: lane.dae
models/karting_club_model/meshes/world/: BlackPlastic.tga  CrackedAsph.tga  PAINTGREY.tga  PAINTbitDarkerGREY.tga  RedPlastic.tga  Rubber4.tga  RustyMetal.tga  SuperConc.tga  TireNew1BLACK.tga  TireNew1BLUE.tga  TireNew1RED.tga  TireNew6WHITE.tga  WhitePlastic.tga  model.dae  profiled sheet black.tga  profiled sheet blue.tga  profiled sheet light gray.tga
models/obstacle/: model.config  model.sdf
models/silesia_ring_model/: model.config  model.sdf
models/silesia_ring_model/meshes/world/: commissario_NEW.dds  concrete_old2_asphalt.dds  glass.dds.001.dds  groove.dds  ks_grass03_1.dds  model.dae  pit_red.dds.001.dds  startline.dds.001.dds  trap_detail.dds.001.dds  tyres_add2.dds.001.dds  tyres_add3.dds  znak.dds  zs_3dgrass_all.dds  zs_armco.dds  zs_asph_decals.dds  zs_banery.dds  zs_bela.dds  zs_bela_black.dds  zs_beton_pit.dds  zs_betonplyt54.dds  zs_betonplyty5m.dds  zs_brama_pit.dds  zs_chodnik_pit.dds  zs_concrete_OLD.dds  zs_concrete_OLD1.dds  zs_concrete_old2.dds  zs_concrete_old2white.dds  zs_details.dds  zs_elewacje_pit.dds  zs_endline.dds  zs_hangar.dds  zs_hotel.dds  zs_kamyczki.dds  zs_kostka_pit.dds  zs_kostkabrukowa.dds  zs_kratkatrawnik.dds  zs_kraweznik05m.dds  zs_kraweznik1m.dds  zs_kruszywo.dds  zs_main_pit_wall.dds  (+22 more)
plugins/: mesh_to_pointcloud.cpp  mesh_to_pointcloud.hh  model_pose_publisher.cpp  pc_frustum_filter.cpp  pc_frustum_filter.hh
worlds/: karting_club.world  karting_club_world.world  silesia_ring.world
